# PAT

./: .gitignore  CMakeLists.txt  README.md  pat1030
C/: pat1001.c  pat1002.c  pat1003.c  pat1004.c  pat1006.c  pat1007.c  pat1008.c  pat1009.c  pat1011.c  pat1012.c  pat1013.c  pat1014.c  pat1016.c  pat1018.c  pat1019.c  pat1020.c  pat1021.c  pat1022.c  pat1023.c  pat1025.c  pat1026.c  pat1027.c  pat1028.c  pat1029.c  pat1031.c  pat1036.c  pat1038.c  pat1041.c  pat1046.c  pat1051.c  pat1056.c  pat1061.c  pat1066.c  pat1071.c  pat1076.c  pat1081.c  pat1086.c  pat1091.c  pat1093.c  pat1097.c  (+3 more)
C++/: pat1001.cpp  pat1003.cpp  pat1005.cpp  pat1010.cpp  pat1015.cpp  pat1017.cpp  pat1020.cpp  pat1024.cpp  pat1024_v2.cpp  pat1025.cpp  pat1025_v2.cpp  pat1028.cpp  pat1030.cpp  pat1032.cpp  pat1033.cpp  pat1037.cpp  pat1038.cpp  pat1039.cpp  pat1042.cpp  pat1043.cpp  pat1044.cpp  pat1045.cpp  pat1047.cpp  pat1048.cpp  pat1050.cpp  pat1051.cpp  pat1053.cpp  pat1054.cpp  pat1055.cpp  pat1057.cpp  pat1058.cpp  pat1059.cpp  pat1062.cpp  pat1063.cpp  pat1064.cpp  pat1065.cpp  pat1067.cpp  pat1069.cpp  pat1072.cpp  pat1073.cpp  (+34 more)
Python/: Callatz.py  pat1002.py
