cmake_minimum_required(VERSION 3.15)
project(PAT C)

set(CMAKE_C_STANDARD 99)

add_executable(pat1001 ./C/pat1001.c)
add_executable(pat1002 ./C/pat1002.c)
add_executable(pat1004 ./C/pat1004.c)
add_executable(pat1006 ./C/pat1006.c)
add_executable(pat1008 ./C/pat1008.c)
add_executable(pat1009 ./C/pat1009.c)
add_executable(pat1011 ./C/pat1011.c)
add_executable(pat1014 ./C/pat1014.c)
add_executable(pat1016 ./C/pat1016.c)
add_executable(pat1018 ./C/pat1018.c)
add_executable(pat1021 ./C/pat1021.c)
add_executable(pat1022 ./C/pat1022.c)
add_executable(pat1023 ./C/pat1023.c)
add_executable(pat1026 ./C/pat1026.c)
add_executable(pat1027 ./C/pat1027.c)
add_executable(pat1012 ./C/pat1012.c)
add_executable(pat1019 ./C/pat1019.c)
add_executable(pat1020 ./C/pat1020.c)
add_executable(pat1025 ./C/pat1025.c)
add_executable(pat1031 ./C/pat1031.c)
add_executable(pat1036 ./C/pat1036.c)
add_executable(pat1041 ./C/pat1041.c)
add_executable(pat1046 ./C/pat1046.c)
add_executable(pat1051 ./C/pat1051.c)
add_executable(pat1056 ./C/pat1056.c)
add_executable(pat1061 ./C/pat1061.c)
add_executable(pat1066 ./C/pat1066.c)
add_executable(pat1071 ./C/pat1071.c)
add_executable(pat1076 ./C/pat1076.c)
add_executable(pat1081 ./C/pat1081.c)
add_executable(pat1086 ./C/pat1086.c)
add_executable(pat1091 ./C/pat1091.c)
add_executable(pat1029 ./C/pat1029.c)
add_executable(pat1028 ./C/pat1028.c)
add_executable(pat1038 ./C/pat1038.c)
add_executable(pat1003 ./C/pat1003.c)
add_executable(pat1098 ./C/pat1098.c)
add_executable(pat1097 ./C/pat1097.c)
add_executable(pat1093 ./C/pat1093.c)

target_link_libraries(pat1051 m)

# debug only
add_executable(test1 tests/test.c)