cmake_minimum_required(VERSION 3.15)
project(PAT C CXX)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 17)

add_executable(pat1001 ./C/pat1001.c)
add_executable(pat1002 ./C/pat1002.c)
add_executable(pat1004 ./C/pat1004.c)
add_executable(pat1006 ./C/pat1006.c)
add_executable(pat1007 ./C/pat1007.c)
add_executable(pat1008 ./C/pat1008.c)
add_executable(pat1009 ./C/pat1009.c)
add_executable(pat1011 ./C/pat1011.c)
add_executable(pat1013 ./C/pat1013.c)
add_executable(pat1014 ./C/pat1014.c)
add_executable(pat1016 ./C/pat1016.c)
add_executable(pat1018 ./C/pat1018.c)
add_executable(pat1021 ./C/pat1021.c)
add_executable(pat1022 ./C/pat1022.c)
add_executable(pat1023 ./C/pat1023.c)
add_executable(pat1026 ./C/pat1026.c)
add_executable(pat1027 ./C/pat1027.c)
add_executable(pat1012 ./C/pat1012.c)
add_executable(pat1019 ./C/pat1019.c)
add_executable(pat1020 ./C/pat1020.c)
add_executable(pat1025 ./C/pat1025.c)
add_executable(pat1031 ./C/pat1031.c)
add_executable(pat1036 ./C/pat1036.c)
add_executable(pat1041 ./C/pat1041.c)
add_executable(pat1046 ./C/pat1046.c)
add_executable(pat1051 ./C/pat1051.c)
add_executable(pat1056 ./C/pat1056.c)
add_executable(pat1061 ./C/pat1061.c)
add_executable(pat1066 ./C/pat1066.c)
add_executable(pat1071 ./C/pat1071.c)
add_executable(pat1076 ./C/pat1076.c)
add_executable(pat1081 ./C/pat1081.c)
add_executable(pat1086 ./C/pat1086.c)
add_executable(pat1091 ./C/pat1091.c)
add_executable(pat1029 ./C/pat1029.c)
add_executable(pat1028 ./C/pat1028.c)
add_executable(pat1038 ./C/pat1038.c)
add_executable(pat1003 ./C/pat1003.c)
add_executable(pat1098 ./C/pat1098.c)
add_executable(pat1097 ./C/pat1097.c)
add_executable(pat1093 ./C/pat1093.c)
add_executable(pat1100 ./C/pat1100.c)
add_executable(pat1099 ./C/pat1099.c)

target_link_libraries(pat1051 m)

# cpp
add_executable(pat1001_cxx ./C++/pat1001.cpp)
add_executable(pat1003_cxx ./C++/pat1003.cpp)
add_executable(pat1005 ./C++/pat1005.cpp)
add_executable(pat1010_cxx ./C++/pat1010.cpp)
add_executable(pat1015_cxx ./C++/pat1015.cpp)
add_executable(pat1017_cxx ./C++/pat1017.cpp)
add_executable(pat1030_cxx ./C++/pat1030.cpp)
add_executable(pat1032_cxx ./C++/pat1032.cpp)
add_executable(pat1020_cxx ./C++/pat1020.cpp)
add_executable(pat1033_cxx ./C++/pat1033.cpp)
add_executable(pat1028_cxx ./C++/pat1028.cpp)
add_executable(pat1025_cxx ./C++/pat1025.cpp)
add_executable(pat1024_cxx ./C++/pat1024.cpp)
add_executable(pat1038_cxx ./C++/pat1038.cpp)
add_executable(pat1037_cxx ./C++/pat1037.cpp)
add_executable(pat1039_cxx ./C++/pat1039.cpp)
add_executable(pat1042_cxx ./C++/pat1042.cpp)
add_executable(pat1048_cxx ./C++/pat1048.cpp)
add_executable(pat1050_cxx ./C++/pat1050.cpp)
add_executable(pat1051_cxx ./C++/pat1051.cpp)
add_executable(pat1047_cxx ./C++/pat1047.cpp)
add_executable(pat1054_cxx ./C++/pat1054.cpp)
add_executable(pat1101_cxx ./C++/pat1101.cpp)
add_executable(pat1057_cxx ./C++/pat1057.cpp)
add_executable(pat1058_cxx ./C++/pat1058.cpp)
add_executable(pat1106_cxx ./C++/pat1106.cpp)
add_executable(pat1111_cxx ./C++/pat1111.cpp)
add_executable(pat1100_cxx ./C++/pat1100.cpp)
add_executable(pat1094_cxx ./C++/pat1094.cpp)
add_executable(pat1091_cxx ./C++/pat1091.cpp)
add_executable(pat1092_cxx ./C++/pat1092.cpp)
add_executable(pat1090_cxx ./C++/pat1090.cpp)
add_executable(pat1055_cxx ./C++/pat1055.cpp)

# debug only
add_executable(test1 tests/test.c)